# pitchr

./: README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
src/: App.tsx  PitchAnalyzer.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  waveform.rs
src/lib/: extractWaveform.ffmpeg.ts  extractWaveform.ts  extractWaveform.web.ts  i18n.ts  openMediaFile.ts  platform.ts
