[package]
name = "pitchr"
version = "0.1.0"
description = "PITCHR — 接地音ベース ピッチ解析"
authors = ["iorinu"]
edition = "2021"

[lib]
name = "pitchr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
hound = "3.5"
tempfile = "3"
